fix/feedback review candidates_filter
