# talent-api/server/api/controllers/candidates/router.ts
@@ -17,4 +17,5 @@ export default express
   .delete(
     '/:folderId/removeCandidate/:candidateId',
     candidatesController.deleteFromFolder
-  );
+  )
+  .get('/filter', candidatesController.filter);
