# talent-api/server/api/controllers/filter/router.ts
@@ -1,4 +1,0 @@
-import express from 'express';
-import candidateFiler from './controller';
-
-export default express.Router().get('/', candidateFiler.filter);
