# talent-api/server/routes.ts
@@ -4,7 +4,6 @@ import candidatesRouter from './api/controllers/candidates/router';
 import recruitersRouter from './api/controllers/recruiters/router';
 import foldersRouter from './api/controllers/folders/router';
 import usersRouter from './api/controllers/users/router';
-import candidateFilter from './api/controllers/filter/router';
 
 export default function routes(app: Application): void {
   app.use('/api/v1/candidates', candidatesRouter);
@@ -12,5 +11,4 @@ export default function routes(app: Application): void {
   app.use('/api/v1/folders', foldersRouter);
   app.use('/api/v1/users', usersRouter);
   app.use('/api/v1/examples', examplesRouter);
-  app.use('/api/v1/filter', candidateFilter);
 }
